Fixed wrong font and some styles for light and dark themes

--- a/src/selector/Components/Selector.css
+++ b/src/selector/Components/Selector.css
@@ -8,11 +8,8 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     transition-property: box-shadow;
     transition-duration: 0.5s;
-}
-@media (prefers-color-scheme: dark) {
-    .popup {
-        border: 1px solid var(--th-popup-border);
-    }
+    border: 1px solid var(--th-popup-border);
+
 }
 .popup.transparent {
     background: rgb(from var(--th-popup) r g b / 0.83);
